fix overflow popup

--- a/css/style.css
+++ b/css/style.css
@@ -529,7 +529,9 @@ display: block;
     width: 100%;
     position: fixed;
     z-index: 10;
-    margin-top: 100px;
+    background: rgba(0, 0, 0, 0.41);
+    padding: 32px 0px 32px 0px;
+    height: 100%;
 }
 .popup .feedback{
     border-radius: 100px;
